<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LOGIN"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="77dp" />

        <EditText
            android:id="@+id/edtLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/EMAIL_HINT"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="112dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PASSWORD_HINT"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/ENTER"
            android:background="@color/colorPrimary"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:onClick="login"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="225dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnNewAccount"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:onClick="register"
            android:text="@string/NO_ACCOUNT_REGISTER"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:textAllCaps="false"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="273dp" />

        <Button
            android:id="@+id/btnForgotPassword"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/FORGOT_PASSWORD"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:onClick="forgotPassword"
            android:textAllCaps="false"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="273dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#B3000000"
        android:onClick="nothing"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="60dp"
            android:layout_height="60dp"/>

    </LinearLayout>

</FrameLayout>